<resources>
    <string name="app_name">Money Market</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="LogIn">LogIn</string>
    <string name="registration_guide"><i>Don\'t have an account? <b>Sign up&#160;</b></i></string>
    <string name="reg_guide"><i><b>Become</b></i> a <b><i>Money Market User</i></b>&#160;</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="ConfPass">Confirm Password</string>
    <string name="Register">Register</string>
    <string name="log_out">LogOut</string>
    <string name="sell">Sell</string>
    <string name="item_name">Item name:</string>
    <string name="item_desc">Item Description:</string>
    <string name="item_price">Item Price:</string>
</resources>
